create fn stubs

--- a/index.html
+++ b/index.html
@@ -30,11 +30,19 @@
 
         <h2>Choose a river to get more information</h2>
 
-        <label><input type="radio" name="riverName" value="" required>River one</label><br>
-        <label><input type="radio" name="riverName" value="" required>River two</label><br>
-        <label><input type="radio" name="riverName" value="" required>River three</label><br>
-        <label><input type="radio" name="riverName" value="" required>River four</label><br>
-        <label><input type="radio" name="riverName" value="" required>River five</label><br>
+        <label><input type="radio" name="riverName" value="" required>North Fork of the American River</label><br>
+        <label><input type="radio" name="riverName" value="" required>Middle Fork of the American River</label><br>
+        <label><input type="radio" name="riverName" value="" required>South Fork of the American River</label><br>
+        <label><input type="radio" name="riverName" value="" required>California Salmon River</label><br>
+        <label><input type="radio" name="riverName" value="" required>Tuolumne River</label><br>
+        <label><input type="radio" name="riverName" value="" required>Cherry Creek</label><br>
+        <label><input type="radio" name="riverName" value="" required>Merced River</label><br>
+        <label><input type="radio" name="riverName" value="" required>Kaweah River</label><br>
+        <label><input type="radio" name="riverName" value="" required>Kern River</label><br>
+        <label><input type="radio" name="riverName" value="" required>Truckee River</label><br>
+        <label><input type="radio" name="riverName" value="" required>North Fork of the Yuba River</label><br>
+        <label><input type="radio" name="riverName" value="" required>East Fork of the Carson River</label><br>
+        
 
         <input type="submit" value="Get info">
 
