--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <label><input id="js-class3" type="checkbox" name="classRapids" value="3">III</label>
         <label><input id="js-class4" type="checkbox" name="classRapids" value="4">IV</label>
         <label><input id="js-class5" type="checkbox" name="classRapids" value="5">V</label>
-        <label><input id="js-check-all" type="checkbox" name="classRapids" required>All</label>
+        <label><input id="js-check-all" type="checkbox" name="classRapids">All</label>
 
         <!-- this header should also be hidden until rivers are listed -->
         <h2>Choose a river to get more information</h2>
