displayRiverInfo now displays in browser

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <section id="results" class="hidden">
         <hr>
         <h2 id="js-river-name"></h2>
-        <div id="js-river-info"></div>
+        <p id="js-river-descrip"></p>
     </section>
 
 
