Add space for links in riverDescrip

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
         <hr>
         <h2 id="js-river-name"></h2>
         <p id="js-river-descrip"></p>
+        <p id="js-user-location"></p>
     </section>
 
 
