Attempt to get weather to fucntion

--- a/index.html
+++ b/index.html
@@ -76,15 +76,22 @@
 
     </form>
 
+    <hr>
     <p id="js-err-msg" class="err-msg"></p>
 
 
     <section id="results" class="hidden">
         <hr>
         <h2 id="js-river-name"></h2>
+
         <p id="js-river-descrip"></p>
+
         <p id="js-user-location"></p>
-        <p id="js-weather"></p>
+        
+        <div>
+            <h3 id="js-weather"></h3>
+        </div>
+        
         <p id="js-directions"></p>
     </section>
 
