--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="main.css">
-    <link rel='stylesheet' type='text/css' href='https://api.tomtom.com/maps-sdk-for-web/cdn/5.x/5.42.0/maps/maps.css'>
-    <script src="https://api.tomtom.com/maps-sdk-for-web/cdn/5.x/5.42.0/maps/maps-web.min.js"></script>
+    <!-- <link rel='stylesheet' type='text/css' href='https://api.tomtom.com/maps-sdk-for-web/cdn/5.x/5.42.0/maps/maps.css'>
+    <script src="https://api.tomtom.com/maps-sdk-for-web/cdn/5.x/5.42.0/maps/maps-web.min.js"></script> -->
     <title>California Whitewater</title>
 </head>
 <body>
@@ -97,6 +97,7 @@
         <div id="js-directions">
             <h3>Current user location:</h3>
             <p id="js-user-location"></p>
+            <p id="js-directions-err-msg" class="err-msg"></p>
         </div>
     </section>
 
