TomTom API functions

--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
             <h3>Current user location:</h3>
             <p id="js-user-location"></p>
             <p id="js-directions-err-msg" class="err-msg"></p>
+            <p id="js-travel-time"></p>
+            <p id="js-travel-distance"></p>
+            <p id="js-eta"></p>
         </div>
     </section>
 
