Ironed out riverDescrips

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
     
             <div id="js-class5-rivers" class="class5 hidden">
-                <label><input type="radio" name="riverName" value="r15" required>California Salmon River</label><br>
+                <!-- <label><input type="radio" name="riverName" value="r15" required>California Salmon River</label><br> -->
                 <label><input type="radio" name="riverName" value="r16" required>Cherry Creek</label><br>
                 <label><input type="radio" name="riverName" value="r17" required>North Fork of the Yuba River</label><br>
                 <!-- <label><input type="radio" name="riverName" value="r10" required>Kern River, Forks</label><br>  -->
@@ -77,7 +77,7 @@
     <hr>
     <p id="js-err-msg" class="err-msg"></p>
 
-    <!-- when we go live there should be a js autoscroll own to the results section -->
+    <!-- when we go live there should be a js autoscroll down to the results section -->
     <section id="results" class="hidden">
         <hr>
         <h2 id="js-river-name"></h2>
