Style scroll down arrow

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>California Whitewater Rivers</h1>
         <p>A collection of popular rivers in California for whitewater boating. Whether you're organizing a private trip or looking for a rafting outfitter, you can find all the information you need here.</p>
         <!-- scroll down link below, has kinks... -->
-        <a href="#" class="scroll-down"><span></span></a>
+        <a href="#" class="scroll-down"><span></span>Scroll</a>
     </header>
     
 
