Add fonts and change submit button color

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="main.css">
+    <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative%7cRaleway&display=swap" rel="stylesheet">
     <title>California Whitewater</title>
 </head>
 <body>
     <header>
-        <h1>California Whitewater Rivers</h1>
+        <h1>CaLiforNia WhiteWater RiVers</h1>
         <p>A collection of popular rivers in California for whitewater boating. Whether you're organizing a private trip or looking for a rafting outfitter, you can find all the information you need here.</p>
         <!-- scroll down link below, has kinks... -->
         <a href="#" class="scroll-down"><span></span>Scroll</a>
@@ -70,7 +71,7 @@
               
         <!-- this button should be hidden until rivers are listed -->
         <div class="btn">
-            <input type="submit" value="Get info" id="js-get-info-btn">
+            <input type="submit" value="Get Info" id="js-get-info-btn">
         </div>
         
     </form>
